--- a/assets/styles/home/contact.scss
+++ b/assets/styles/home/contact.scss
@@ -1,15 +1,14 @@
 .contact{
     margin-bottom: 60px;
     & .title{
-        background-color: $secondary;
         text-transform: uppercase;
-        color: white;
+        color: $secondary;
         position: relative;
         padding-top: 50px!important;
         padding-bottom: 50px;
         font-weight: lighter;
         font-size: 2rem;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         & span {
             font-weight: bold;
         }
