--- a/assets/styles/home/inscriptions.scss
+++ b/assets/styles/home/inscriptions.scss
@@ -37,7 +37,7 @@
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     padding: 40px 20px 60px 20px;
-    margin: 90px 0;
+    margin-bottom: 90px;
     &__title{
         text-transform: uppercase;
         position: relative;
