--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,9 +3,12 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~aos/dist/aos.css'; // You can also use <link> for styles
+
 @import "./variables";
 @import "./global";
 @import "./layout/index";
 @import "./home/index";
 @import "./news/index";
 @import "./secteurs/index";
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
