--- a/assets/styles/home/search.scss
+++ b/assets/styles/home/search.scss
@@ -1,122 +1,99 @@
-.searchs{
-    & .title{
-        text-transform: uppercase;
-        font-weight: lighter;
-        font-size: 2.688rem;
-        & span {
-            font-weight: bold;
-        }
-    }
-    .card{
-  
-        border: none;
-        background: #eee;
-      
-      }
-    textarea:focus, 
-    textarea.form-control:focus, 
-    input.form-control:focus, 
-    input[type=text]:focus, 
-    input[type=password]:focus, 
-    input[type=email]:focus, 
-    input[type=number]:focus, 
-    [type=text].form-control:focus, 
-    [type=password].form-control:focus, 
-    [type=email].form-control:focus, 
-    [type=tel].form-control:focus, 
-    [contenteditable].form-control:focus {
-        box-shadow: unset;
-    }
-      .search {
-        width: 100%;
-            margin-bottom: auto;
-          margin-top: 20px;
-          height: 50px;
-              background-color: #fff;
-          padding: 10px;
-          border-radius: 5px;
-      }
-      
-      .search-input {
-          color: white;
-          border: 0;
-          outline: 0;
-          background: none;
-          width: 0;
-          margin-top: 5px;
-          caret-color: transparent;
-          line-height: 20px;
-          transition: width 0.4s linear
-      }
-      
-      .search .search-input {
-          padding: 0 10px;
-          width: 100%;
-          caret-color: $primary;
-          font-size: 19px;
-          font-weight: 300;
-          color: black;
-          transition: width 0.4s linear;
-      }
-      
-      
-      .search-icon {
-              height: 34px;
-          width: 34px;
-          float: right;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          color: white;
-          background-color: $primary;
-          border-color: $primary;
-          font-size: 10px;
-              bottom: 43px;
-              position: relative;
-              border-radius: 5px;
-      }
-      
-      .search-icon:hover{
-      
-        color: #fff !important;
-      }
-      
-      a:link {
-          text-decoration: none
-      }
-      
-      
-      
-      .card-inner {
-          position: relative;
-          display: flex;
-          flex-direction: column;
-          min-width: 0;
-          word-wrap: break-word;
-          background-color: #fff;
-          background-clip: border-box;
-          border: 1px solid rgba(0,0,0,.125);
-          border-radius: .25rem;
-          border:none;
-          cursor: pointer;
-          transition: all 2s;
-      }
-      
-      
-      .card-inner:hover{
-      
-         transform: scale(1.1);
-      
-      }
-      
-      .mg-text span{
-      
-        font-size: 12px;
-      
-      }
-      
-      .mg-text{
-      
-        line-height: 14px;
-      }
+.searchs {
+  textarea:focus,
+  textarea.form-control:focus,
+  input.form-control:focus,
+  input[type="text"]:focus,
+  input[type="password"]:focus,
+  input[type="email"]:focus,
+  input[type="number"]:focus,
+  [type="text"].form-control:focus,
+  [type="password"].form-control:focus,
+  [type="email"].form-control:focus,
+  [type="tel"].form-control:focus,
+  [contenteditable].form-control:focus {
+    box-shadow: unset;
+  }
+  .search {
+    width: 100%;
+    margin-bottom: auto;
+    margin-top: 20px;
+    height: 50px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+
+  .search-input {
+    color: white;
+    border: 0;
+    outline: 0;
+    background: none;
+    width: 0;
+    margin-top: 5px;
+    caret-color: transparent;
+    line-height: 20px;
+    transition: width 0.4s linear;
+  }
+
+  .search .search-input {
+    padding: 0 10px;
+    width: 100%;
+    caret-color: $primary;
+    font-size: 0.9rem;
+    font-weight: 300;
+    color: black;
+    transition: width 0.4s linear;
+  }
+
+  .search-icon {
+    height: 34px;
+    width: 34px;
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: $primary;
+    border-color: $primary;
+    font-size: 10px;
+    bottom: 43px;
+    position: relative;
+    border-radius: 5px;
+  }
+
+  .search-icon:hover {
+    color: #fff !important;
+  }
+
+  a:link {
+    text-decoration: none;
+  }
+
+  .card-inner {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+    border: none;
+    cursor: pointer;
+    transition: all 2s;
+  }
+
+  .card-inner:hover {
+    transform: scale(1.1);
+  }
+
+  .mg-text span {
+    font-size: 12px;
+  }
+
+  .mg-text {
+    line-height: 14px;
+  }
 }
