--- a/assets/styles/layout/partials/navbar.scss
+++ b/assets/styles/layout/partials/navbar.scss
@@ -1,31 +1,62 @@
-.navbar-nav {
-    & .nav-link{
-        display: inline-block;
-        &::after{
-            content: "";
-            display: block;
-            width: 0;
-            height: 4px;
-            background: $primary;
-            color: $primary;
-            transition: width .3s;
+header{
+    .top-navbar{
+        background-color: $secondary;
+        .btn-connexion{
+            color:  var(--bs-white);
         }
-        &:hover{
-            color: $primary;
-            &::after{
-                width: 100%;
-            }
+        .btn-inscription{
+            color:  var(--bs-white);
+            background-color: $primary;
         }
-        &.active{
-            color: $primary;
+        .footer-social-icon a {
+            color: var(--bs-white);
+            font-size: 16px;
+            margin-right: 4px;
+            text-decoration: none;
+        }
+    }
+    .navbar.bg{
+        background-color: $secondary;
+        a{
+            font-weight: bold;
+            color: var(--bs-white);
+        }
+    }
+    .navbar-brand{
+        span{
+            font-size: 1.2rem;
+        }
+    }
+    .navbar-nav {
+        & .nav-link{
+            display: inline-block;
             &::after{
                 content: "";
                 display: block;
-                width: 100%;
+                width: 0;
                 height: 4px;
                 background: $primary;
+                color: $primary;
+                transition: width .3s;
+            }
+            &:hover{
+                color: $primary;
+                &::after{
+                    width: 100%;
+                }
+            }
+            &.active{
+                color: var(--bs-white);
+                &::after{
+                    content: "";
+                    display: block;
+                    width: 100%;
+                    height: 4px;
+                    background: $primary;
+                }
             }
         }
+        
     }
     
 }
