--- a/assets/styles/secteurs/show.scss
+++ b/assets/styles/secteurs/show.scss
@@ -1,162 +1,263 @@
-.show_secteurs{
-    & .title{
-        background-color: $secondary;
-        text-transform: uppercase;
-        color: white;
-        position: relative;
-        padding-top: 50px!important;
-        padding-bottom: 50px;
-        font-weight: lighter;
-        font-size: 2rem;
-        margin-bottom: 40px;
-        & span {
-            font-weight: bold;
-        }
+.show_secteurs {
+  & .title {
+    text-transform: uppercase;
+    color: $secondary;
+    position: relative;
+    padding-top: 50px !important;
+    padding-bottom: 50px;
+    font-weight: lighter;
+    font-size: 2rem;
+    & span {
+      font-weight: bold;
     }
-    .card{
+  }
+  .card {
+    height: 100%;
+    text-align: left;
+    position: relative;
+    .card-title {
+      font-size: 1rem;
+    }
+    .card-text {
+      padding: 0px 10px 0px 10px;
+    }
+    &-pulse {
+      position: absolute;
+      top: 1px;
+      right: 1px;
+      height: 25px;
+      width: 25px;
+      z-index: 10;
+      border: 5px solid #ef5350;
+      border-radius: 70px;
+      animation: pulse 1s ease-out infinite;
+    }
+    &-marker {
+      position: absolute;
+      top: 6px;
+      right: 6px;
+      height: 15px;
+      width: 15px;
+      border-radius: 70px;
+      background: red;
+    }
+    &-img {
+      width: 80px;
+      height: 80px;
+      background-repeat: no-repeat !important;
+      background-size: contain !important;
+      background-position: center !important;
+      border: 2px solid #ddd;
+      border-radius: 50%;
+      position: absolute;
+      top: 186px;
+      left: 10px;
+    }
+    &-play {
+      width: 94px;
+      height: 94px;
+      background: radial-gradient($primary 50%, rgba(242, 104, 65, 0.4) 52%);
+      border-radius: 50%;
+      display: block;
+      position: absolute;
+      left: calc(50% - 47px);
+      top: calc(50% - 85px);
+      overflow: hidden;
+      cursor: pointer;
+      &::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-40%) translateY(-50%);
+        width: 0;
+        height: 0;
+        border-top: 10px solid transparent;
+        border-bottom: 10px solid transparent;
+        border-left: 15px solid #fff;
+        z-index: 100;
+        transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        width: 120px;
+        height: 120px;
+        animation-delay: 0s;
+        animation: pulsate-btn 2s;
+        animation-direction: forwards;
+        animation-iteration-count: infinite;
+        animation-timing-function: steps;
+        opacity: 1;
+        border-radius: 50%;
+        border: 5px solid rgba(242, 104, 65, 0.7);
+        top: -15%;
+        left: -15%;
+        background: rgba(198, 16, 0, 0);
+      }
+      &:hover::after {
+        border-left: 15px solid $primary;
+        transform: scale(20);
+      }
+      &:hover::before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-40%) translateY(-50%);
+        width: 0;
+        height: 0;
+        border: none;
+        border-top: 10px solid transparent;
+        border-bottom: 10px solid transparent;
+        border-left: 15px solid #fff;
+        z-index: 200;
+        animation: none;
+        border-radius: 0;
+      }
+    }
+    &-whatsapp {
+      color: #25d366;
+      text-decoration: none;
+      i {
+        font-size: 1.5rem;
+      }
+    }
+    &-phone {
+      color: $secondary;
+      text-decoration: none;
+      i {
+        font-size: 1.2rem;
+      }
+    }
+    &-seuil {
+      color: $primary;
+      text-decoration: none;
+      i {
+        font-size: 1.2rem;
+      }
+    }
+    &-fb {
+      color: #1877f2;
+      text-decoration: none;
+      i {
+        font-size: 1.4rem;
+      }
+    }
+    &-website {
+      color: $secondary;
+      text-decoration: none;
+      i {
+        font-size: 1.3rem;
+      }
+    }
+    &-details {
+      color: $secondary;
+      text-decoration: none;
+      i {
+        font-size: 1.3rem;
+      }
+    }
+    &-inscription {
+      color: $primary;
+      text-decoration: none;
+      i {
+        font-size: 0.8rem;
+      }
+      .wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .pulse {
+        width: 100%;
         height: 100%;
-        text-align: left;
+        padding: 8px;
+        background-color: red;
+        border-radius: 50%;
         position: relative;
-        .card-title{
-            font-size: 1rem;
-            padding: 48px 10px 0px 10px;
+        animation: animate 3s linear infinite;
+      }
+      .pulse i {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        height: 100%;
+        cursor: pointer;
+      }
+      @keyframes animate {
+        0% {
+          box-shadow: 0 0 0 0 rgb(255, 109, 74, 0.7),
+            0 0 0 0 rgb(255, 109, 74, 0.7);
         }
-        .card-text{
-            padding: 0px 10px 0px 10px;
+        40% {
+          box-shadow: 0 0 0 10px rgb(255, 109, 74, 0),
+            0 0 0 0 rgb(255, 109, 74, 0.7);
         }
-        &-inscription{
-            position: absolute;
-            background-color: #F26841;
-            color: white;
-            top: 48%;
-            right: 10px;
-            padding: 5px 10px;
-            border-radius: 10px;
-            font-size: 10px;
-            font-weight: bold;
-            
+        80% {
+          box-shadow: 0 0 0 10px rgb(255, 109, 74, 0),
+            0 0 0 15px rgb(255, 109, 74, 0);
         }
-        &-pulse {
-            position: absolute;
-            top: 1px;
-            right: 1px;
-            height: 25px;
-            width: 25px;
-            z-index: 10;
-            border: 5px solid #ef5350;
-            border-radius: 70px;
-            animation: pulse 1s ease-out infinite;
-          }
-        &-marker {
-            position: absolute;
-            top: 6px;
-            right: 6px;
-            height: 15px;
-            width: 15px;
-            border-radius: 70px;
-            background: red;
-          }
-        &-img{
-            width: 80px;
-            height: 80px;
-            background-repeat: no-repeat!important;
-            background-size: contain!important;
-            background-position: center!important;
-            border: 2px solid #ddd;
-            border-radius: 50%;
-            position: absolute;
-            top: 186px;
-            left:10px
+        100% {
+          box-shadow: 0 0 0 0 rgb(255, 109, 74, 0),
+            0 0 0 15px rgb(255, 109, 74, 0);
         }
-        &-play{
-            position: absolute;
-            top: 18%;
-            left: 41%;
-            i{
-                font-size: 50px;
-                color: $primary;
-                transition: all .2s ease-out;
-                cursor: pointer;
-                &:hover{
-                    transform: scale(1.1);
-                }
-            }
-        }
-        &-whatsapp{
-            color: #25d366;
-            text-decoration: none;
-            i{
-                font-size: 1.5rem;
-            }
-        }
-        &-phone{
-            color: $secondary;
-            text-decoration: none;
-            i{
-                font-size: 1.2rem;
-            }
-        }
-        &-seuil{
-            color: $primary;
-            text-decoration: none;
-            i{
-                font-size: 1.2rem;
-            }
-        }
-        &-fb{
-            color: #1877f2;
-            text-decoration: none;
-            i{
-                font-size: 1.4rem;
-            }
-        }
-        &-website{
-            color: $secondary;
-            text-decoration: none;
-            i{
-                font-size: 1.3rem;
-            }
-        }
+      }
     }
-    .video.modal-dialog{
-        max-width: 920px;
-        margin: 30px auto;
-    }
-  
-    .video .modal-body {
-        position:relative;
-        padding:0px;
-    }
-    .video .btn-close {
-        position:absolute;
-        right:-30px;
-        top:0;
-    }
+  }
+  .video.modal-dialog {
+    max-width: 920px;
+    margin: 30px auto;
+  }
+
+  .video .modal-body {
+    position: relative;
+    padding: 0px;
+  }
+  .video .btn-close {
+    position: absolute;
+    right: -30px;
+    top: 0;
+  }
+}
+
+@keyframes pulsate-btn {
+  0% {
+    transform: scale(0.6, 0.6);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1, 1);
+    opacity: 0;
+  }
 }
 
 @keyframes pulse {
-    0% {
-        -webkit-transform: scale(0);
-        opacity: 0.0;
-    }
-  
-    25% {
-        -webkit-transform: scale(0.1);
-        opacity: 0.1;
-    }
-  
-    50% {
-        -webkit-transform: scale(0.5);
-        opacity: 0.3;
-    }
-  
-    75% {
-        -webkit-transform: scale(0.8);
-        opacity: 0.5;
-      }
-  
-    100% {
-        -webkit-transform: scale(1);
-        opacity: 0.0;
-    }
-  } 
+  0% {
+    -webkit-transform: scale(0);
+    opacity: 0;
+  }
+
+  25% {
+    -webkit-transform: scale(0.1);
+    opacity: 0.1;
+  }
+
+  50% {
+    -webkit-transform: scale(0.5);
+    opacity: 0.3;
+  }
+
+  75% {
+    -webkit-transform: scale(0.8);
+    opacity: 0.5;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    opacity: 0;
+  }
+}
