--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -6,33 +6,68 @@
 
 {% block body %}
 	<section class="all_news">
-		<h1 class="title text-center pt-4">Explorer nos
-			<span>Actualités</span>
+		<h1 class="title text-center pt-4">آخر
+			<span>المستجدات</span>
 		</h1>
-		<p class="text-center container">Restez informé des dernières nouvelles sur les événements et activités d'orientation, ainsi que des autres nouvelles importantes de la vie universitaire, y compris les clubs, les organisations, les projets de service communautaire et plus encore.</p>
 		<div class="container">
-			<div class="row justify-content-center">
+			<div class="row" data-aos="fade-up">
+				{% set delay = 100 %}
 				{% for key, item in pagination %}
-					<div class="col-12 col-lg-3 mb-sm-4 mb-lg-0">
-						<div class="card d-flex flex-column">
-							<img src="{{ asset('uploads/news/' ~ item.image) }}" class="card-img-top flex-grow-1" alt="{{item.title}}">
-							<h5 class="card-title">
-								<a href="{{ path('app_news_show', { slug: item.slug }) }}">{{item.title|u.truncate(24, '...')}}</a>
-							</h5>
-							<p class="card-text card-footer">
-								<small class="text-muted">
-									<i class="fa-regular fa-clock"></i>
-									Publiée
-									<time datetime="{{ item.publishedAt|date('Y-m-d H:i') }}">{{ item.publishedAt|ago }}</time>
-								</small>
-							</p>
+					<div class="col-12 mb-2" data-aos="zoom-in" data-aos-delay="{{delay}}">
+						<div class="card p-4 row d-flex flex-row-reverse">
+
+							{% set image =  null %}
+							{% set title =  null %}
+							{% if item.image %}
+								{% set image =  'uploads/news/' ~ item.image %}
+								{% set title =  item.title %}
+							{% elseif  item.etablissement and item.etablissement.logo %}
+								{% set image =  'uploads/etablissements/' ~ item.etablissement.logo %}
+								{% set title =  item.etablissement.name %}
+							{% endif %}
+							<div class="col-md-8 mb-2 mb-md-0">
+								<div class="d-flex align-items-center flex-row-reverse">
+									{% if image %}
+										<img src="{{ asset(image) }}" class="all_news--img" alt="{{title}}" title="{{title}}">
+									{% endif %}
+									<div>
+										<h2 dir="RTL" class="all_news--title  flex-grow-1 text-end">
+											{{item.title}}
+										</h2>
+										{% if item.dateLimitInscription %}
+
+											<p dir="RTL" class="text-end all_news--dateLimitInscription">
+												قبل
+												<strong>{{item.dateLimitInscription | date('Y/m/d')}}</strong>
+											</p>
+										{% endif %}
+									</div>
+								</div>
+							</div>
+							{% if item.docNews | length > 0 %}
+								<div dir="RTL" class="col all_news--docs">
+									<ul>
+										{% for doc in item.docNews %}
+											<li>
+												{% if doc.link %}
+													<a href="{{doc.link}}" target="_blank">{{doc.title}}</a>
+												{% endif %}
+												{% if doc.file %}
+													<a href="{{ asset('uploads/news_docs/' ~ doc.file)}}" download>{{doc.title}}</a>
+												{% endif %}
+											</li>
+										{% endfor %}
+									</ul>
+								</div>
+							{% endif %}
 						</div>
 					</div>
+					{% set delay = delay + 50 %}
 				{% endfor %}
 			</div>
 		</div>
-		<div class="d-flex justify-content-center py-4">
-			{{ knp_pagination_render(pagination) }}
+		<div class="pagination justify-content-center py-4 ">
+			{{ knp_pagination_render(pagination, '/Pagination/custom_pagination_bootstrap_ar.html.twig') }}
 		</div>
 	</section>
 {% endblock %}
