--- a/templates/secteurs/modal_seuil.html.twig
+++ b/templates/secteurs/modal_seuil.html.twig
@@ -16,34 +16,55 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td>Sciences mathématiques</td>
-							<td>{{ etablissement.seuilSM }}</td>
-						</tr>
-						<tr>
-							<td>Sciences Physiques</td>
-							<td>{{ etablissement.seuilSP }}</td>
-						</tr>
-						<tr>
-							<td>Sciences de la Vie et de la Terre</td>
-							<td>{{ etablissement.seuilSVT }}</td>
-						</tr>
-						<tr>
-							<td>Sciences agronomiques</td>
-							<td>{{ etablissement.seuilSAgro }}</td>
-						</tr>
-						<tr>
-							<td>Sciences économiques</td>
-							<td>{{ etablissement.seuilEco }}</td>
-						</tr>
-						<tr>
-							<td>Sciences et Technologies Mécaniques</td>
-							<td>{{ etablissement.seuilSTM }}</td>
-						</tr>
-						<tr>
-							<td>Sciences et Technologies Electriques</td>
-							<td>{{ etablissement.seuilSTE }}</td>
-						</tr>
+						{% if etablissement.seuilSM != 0 %}
+							<tr>
+								<td>Sciences mathématiques</td>
+								<td>{{ etablissement.seuilSM }}</td>
+							</tr>
+						{% endif %}
+
+						{% if etablissement.seuilSP != 0 %}
+							<tr>
+								<td>Sciences Physiques</td>
+								<td>{{ etablissement.seuilSP }}</td>
+							</tr>
+						{% endif %}
+
+						{% if etablissement.seuilSVT != 0 %}
+							<tr>
+								<td>Sciences de la Vie et de la Terre</td>
+								<td>{{ etablissement.seuilSVT }}</td>
+							</tr>
+						{% endif %}
+
+						{% if etablissement.seuilSAgro != 0 %}
+							<tr>
+								<td>Sciences agronomiques</td>
+								<td>{{ etablissement.seuilSAgro }}</td>
+							</tr>
+						{% endif %}
+
+						{% if etablissement.seuilEco != 0 %}
+							<tr>
+								<td>Sciences économiques</td>
+								<td>{{ etablissement.seuilEco }}</td>
+							</tr>
+						{% endif %}
+
+						{% if etablissement.seuilSTM != 0 %}
+							<tr>
+								<td>Sciences et Technologies Mécaniques</td>
+								<td>{{ etablissement.seuilSTM }}</td>
+							</tr>
+						{% endif %}
+
+						{% if etablissement.seuilSTE != 0 %}
+							<tr>
+								<td>Sciences et Technologies Electriques</td>
+								<td>{{ etablissement.seuilSTE }}</td>
+							</tr>
+						{% endif %}
+
 					</tbody>
 				</table>
 			</div>
