--- a/templates/secteurs/modal_seuil.html.twig
+++ b/templates/secteurs/modal_seuil.html.twig
@@ -3,7 +3,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">Les seuils de l'établissement
-					<strong>{{etablissement.sigle}}</strong>
+					<strong class="text-uppercase">{{etablissement.sigle}}</strong>
 				</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
