--- a/templates/etablissement/modal_inscription.html.twig
+++ b/templates/etablissement/modal_inscription.html.twig
@@ -4,15 +4,15 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<div class="" style="background: url('{{ asset('uploads/etablissements/' ~ etablissement.logo) }}') center, #fff;width: 50px;
-																																																																																																																	height: 50px;
-																																																																																																																	background-repeat: no-repeat !important;
-																																																																																																																	background-size: contain !important;
-																																																																																																																	background-position: center !important;
-																																																																																																																	border: 2px solid #ddd;
-																																																																																																																	border-radius: 50%;
-																																																																																																																	margin-right:10px"></div>
+															height: 50px;
+															background-repeat: no-repeat !important;
+															background-size: contain !important;
+															background-position: center !important;
+															border: 2px solid #ddd;
+															border-radius: 50%;
+															margin-right:10px"></div>
 					<h5 class="modal-title" id="exampleModalLabel">
-						<strong>{{' ' ~ etablissement.sigle}}:
+						<strong class="text-uppercase">{{' ' ~ etablissement.sigle}}:
 						</strong>L'inscription et ouverte jusqu'à le
 
 						<strong>{{ etablissement.news.dateLimitInscription | date('d/m/Y')}}</strong>
