--- a/templates/secteurs/show.html.twig
+++ b/templates/secteurs/show.html.twig
@@ -36,7 +36,7 @@
 							{% endif %}
 
 							<h2 class="card-title">
-								({{etablissement.sigle}})
+								<span class="text-uppercase">({{etablissement.sigle}})</span>
 								<span data-bs-toggle="tooltip" data-bs-placement="top" title="{{etablissement.name}}">{{etablissement.name | u.truncate(28, '...')}}</span>
 							</h2>
 							<p class="card-text">
