--- a/templates/layouts/partials/_footer.html.twig
+++ b/templates/layouts/partials/_footer.html.twig
@@ -15,9 +15,9 @@
 					<div class="footer-menu">
 						<ul>
 							<li><a href="/" id="">Accueil</a></li>
-							<li><a class=""href="{{ path('app_news') }}">Actualités</a></li>
+							<li><a class=""href="{{ path('app_news') }}">Concours</a></li>
 							<li><a class=""href="{{ path('app_etablissement') }}">Etablissments</a></li>
-							<li><a class=""href="{{ path('app_etablissement_etudier_etranger') }}">Etudier à l'étranger</a></li>
+							<li><a class=""href="{{ path('app_etablissement_etudier_etranger') }}">Etude à l'étranger</a></li>
 							<li><a class=""href="{{ path('app_contact') }}">Contact</a></li>
 						</ul>
 					</div>
