--- a/templates/layouts/partials/_navbar.html.twig
+++ b/templates/layouts/partials/_navbar.html.twig
@@ -45,13 +45,13 @@
 						<a class="nav-link {% if app.request.get('_route') == 'app_home' %}active{% endif %} " href=" {{path('app_home')}} ">Accueil</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link {% if app.request.get('_route') == 'app_news' %}active{% endif %} " href="{{ path('app_news') }}">Actualités</a>
+						<a class="nav-link {% if app.request.get('_route') == 'app_news' %}active{% endif %} " href="{{ path('app_news') }}">Concours</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link {% if app.request.get('_route') == 'app_etablissement' %}active{% endif %}" href="{{ path('app_etablissement') }}">Etablissments</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link {% if app.request.get('_route') == 'app_etablissement_etudier_etranger' %}active{% endif %}" href="{{ path('app_etablissement_etudier_etranger') }}">Etudier à l'étranger</a>
+						<a class="nav-link {% if app.request.get('_route') == 'app_etablissement_etudier_etranger' %}active{% endif %}" href="{{ path('app_etablissement_etudier_etranger') }}">Etude à l'étranger</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link {% if app.request.get('_route') == 'app_contact' %}active{% endif %}" href="{{ path('app_contact') }}">Contact</a>
