--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,28 +14,18 @@
 					<img src="{{ asset('uploads/images/details-1.png') }}" class="img-fluid" alt="">
 				</div>
 				<div class="col-md-8 pt-4 d-flex flex-column" data-aos="fade-up">
-					<h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
-					<p class="fst-italic">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-																																																																																																						              magna aliqua.
-					</p>
+					<h3>Trouve le bon concours pour tes projets.</h3>
+				
 					<ul>
 						<li>
 							<i class="fas fa-check"></i>
-							Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+							Vous trouvez une liste de tous les concours affichés, classés par date de clôture.</li>
 						<li>
 							<i class="fas fa-check"></i>
-							Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-						<li>
-							<i class="fas fa-check"></i>
-							Iure at voluptas aspernatur dignissimos doloribus repudiandae.</li>
-						<li>
-							<i class="fas fa-check"></i>
-							Est ipsa assumenda id facilis nesciunt placeat sed doloribus praesentium.</li>
+							Identifiez le concours qui vous aidera à atteindre vos objectifs.</li>
+						
 					</ul>
-					<p>
-						Voluptas nisi in quia excepturi nihil voluptas nam et ut. Expedita omnis eum consequatur non. Sed in asperiores aut repellendus. Error quisquam ab maiores. Quibusdam sit in officia
-					</p>
+					
 					<div class=" me-auto mt-4">
 						<a href="{{ path('app_news') }}" id="btn">
 							<svg viewbox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
@@ -53,19 +43,19 @@
 					<img src="{{ asset('uploads/images/details-2.png') }}" class="img-fluid" alt="">
 				</div>
 				<div class="col-md-8 pt-5 order-2 order-md-1 d-flex flex-column" data-aos="fade-up">
-					<h3>Corporis temporibus maiores provident</h3>
-					<p class="fst-italic">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-																																																																																																						              magna aliqua.
-					</p>
-					<p>
-						Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-																																																																																																						              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-																																																																																																						              culpa qui officia deserunt mollit anim id est laborum
-					</p>
-					<p>
-						Inventore id enim dolor dicta qui et magni molestiae. Mollitia optio officia illum ut cupiditate eos autem. Soluta dolorum repellendus repellat amet autem rerum illum in. Quibusdam occaecati est nisi esse. Saepe aut dignissimos distinctio id enim.
-					</p>
+					<h3>Découvre l'établissement de tes rêves.</h3>
+					<ul>
+						<li>
+							<i class="fas fa-check"></i>
+							Découvrez tous les établissements post-bac au Maroc, notamment les écoles d'ingénieurs, les écoles de commerce, les écoles de médecine, les universités et bien d'autres.</li>
+						<li>
+							<i class="fas fa-check"></i>
+							Découvrez l'établissement qui correspond le mieux à vos besoins et à vos rêves.</li>
+							<li>
+							<i class="fas fa-check"></i>
+						Recherchez parmi des centaines d'établissements pour trouver celui qui sera le plus adapté à votre projet.</li>
+						
+					</ul>
 
 					<div class=" me-auto mt-4">
 						<a href="{{ path('app_etablissement') }}" id="btn">
@@ -85,25 +75,9 @@
 					<img src="{{ asset('uploads/images/details-3.png') }}" class="img-fluid" alt="">
 				</div>
 				<div class="col-md-8 pt-5 d-flex flex-column" data-aos="fade-up">
-					<h3>Sunt consequatur ad ut est nulla consectetur reiciendis animi voluptas</h3>
-					<p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut quia voluptatem hic voluptas dolor doloremque.</p>
-					<ul>
-						<li>
-							<i class="fas fa-check"></i>
-							Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-						<li>
-							<i class="fas fa-check"></i>
-							Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-						<li>
-							<i class="fas fa-check"></i>
-							Facilis ut et voluptatem aperiam. Autem soluta ad fugiat.</li>
-					</ul>
-					<p>
-						Qui consequatur temporibus. Enim et corporis sit sunt harum praesentium suscipit ut voluptatem. Et nihil magni debitis consequatur est.
-					</p>
-					<p>
-						Suscipit enim et. Ut optio esse quidem quam reiciendis esse odit excepturi. Vel dolores rerum soluta explicabo vel fugiat eum non.
-					</p>
+					<h3>Explorez le monde en étudiant à l’étranger !</h3>
+					<p>Savoir plus sur les programmes académiques d'études à l'international, les exigences d'admission, les frais de scolarité et les bourses d'études disponibles.</p>
+				
 					<div class=" me-auto mt-4">
 						<a href="{{ path('app_etablissement_etudier_etranger') }}" id="btn">
 							<svg viewbox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
@@ -121,26 +95,21 @@
 					<img src="{{ asset('uploads/images/details-4.png') }}" class="img-fluid" alt="">
 				</div>
 				<div class="col-md-8 pt-5 order-2 order-md-1 d-flex flex-column" data-aos="fade-up">
-					<h3>Quas et necessitatibus eaque impedit ipsum animi consequatur incidunt in</h3>
+					<h3>Testez-vous en un clic avec les QCM. </h3>
 					<p class="fst-italic">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-																																																																																																						              magna aliqua.
+						Vous pouvez également trouver :
 					</p>
-					<p>
-						Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-																																																																																																						              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-																																																																																																						              culpa qui officia deserunt mollit anim id est laborum
-					</p>
+					
 					<ul>
 						<li>
 							<i class="fas fa-check"></i>
-							Et praesentium laboriosam architecto nam .</li>
+							Des conseils et des astuces pour préparer les concours, ainsi que des témoignages et des retours d'expérience d'étudiants qui ont réussi à passer ces concours.</li>
 						<li>
 							<i class="fas fa-check"></i>
-							Eius et voluptate. Enim earum tempore aliquid. Nobis et sunt consequatur. Aut repellat in numquam velit quo dignissimos et.</li>
+							La liste des concours des années précédente.</li>
 						<li>
 							<i class="fas fa-check"></i>
-							Facilis ut et voluptatem aperiam. Autem soluta ad fugiat.</li>
+							Les établissements spécialisés dans la préparation des concours (ENSA, ENCG, ENA, Médecine…) dans la ville de résidence.</li>
 					</ul>
 					<div class=" me-auto mt-4">
 						<a href="{{ path('app_contact') }}" id="btn">
